Fixed sidebar from not showing up due to scss error.

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,6 @@
 .nav-bar {
     background: #181818;
-    background: 60px;
+    width: 60px;
     height: 100%;
     position: absolute;
     top: 0;
